# llm-finetuning

./: .gitignore  Dockerfile.finetuning  Dockerfile.inference  LICENSE  README.md  pod-watcher-role.yaml  pod-watcher-rolebinding.yaml  prefect-deploy-job.yaml  prefect-run-job.yaml  prefect-worker-values.yaml  prefect.yaml  pyproject.toml  update-pull-steps.yaml
data/: dataset.jsonl
src/finetuning/: fine_tune.py
src/inference/: inference.py
src/workflows/: fine_tune_flow.py  inference_flow.py  main_workflow.py
