[project]
name = "llm-finetuning"
version = "0.1.0"
description = "Fine-tuning LLM with LoRA"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.3.2",
    "fastapi[standard]==0.115.4",
    "huggingface-hub[cli]>=0.29.1",
    "loguru>=0.7.3",
    "mlflow>=2.20.3",
    # "mlx>=0.23.1",
    # "mlx-lm>=0.21.4",
    "peft>=0.14.0",
    "prefect[kubernetes]>=3.2.9",
    "torch>=2.5.1",
    "transformers>=4.49.0",
    "trl>=0.15.2",
    # "vllm>=0.7.3",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "Q",      # flake8 quotes
    "I",      # isort
    "C90",    # {name} is too complex
    "RUF100", # unused noqa (auto-fixable)
    "T20",    # print found
]
ignore = [
    "F821", # undefined name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
